# TechDemo-v4

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  ShadersToReload.yml  makefile  resource.rc
data/: GameResources.yml  Settings.yml
shaders/: Defines.hpp  UsefulFunctions.h
shaders/Imports/: Defines.glsl  GGX.glsl  Uniforms.glsl  UsefulFunctions.glsl
shaders/Models/: simple-model-pbr.glsl  skinned-model-pbr.glsl
shaders/PostProcessing/: BilateralBlurHorizontal.glsl  BilateralBlurVertical.glsl  ComposeLightAndGBuffer.glsl  FXAA.glsl  SSAO.glsl  ToneMapping.glsl
shaders/Postprocessing/: BilateralBlur.glsl  ChromaticDistortion.glsl  FilmGrain.glsl  Scattering.glsl  ScatteringShadowed.glsl  Sky.glsl
shaders/Rendering/: Lines.glsl  PathfinderDepthGeneration.glsl  simple-model-csm.glsl  simple-model-pbr.glsl  skinned-model-csm.glsl  skinned-model-pbr.glsl
shaders/Shading/: ComposeLightAndGBuffer.glsl  LightSource_POINT.glsl  LightSource_SPOT.glsl  Sun+Ambient+Shadow.glsl  light-directional.glsl
shaders/UI/: ComposeWithBlurredScene.glsl  PanelBackground.glsl  UIText.glsl  ui-panel-background-depth.glsl  ui-panel-background.glsl  ui-panel-coloredPolygon.glsl  ui-text.glsl
shaders/Utils/: AlphaBlendFullscreenQuad.glsl  AlphaPattern2D.glsl  ApplyFBO.glsl  BackgroundTexture.glsl  BlurHorizontal.glsl  BlurHorizontal_Anamorphic.glsl  BlurHorizontal_SingleChannel.glsl  BlurVertical.glsl  BlurVertical_Anamorphic.glsl  BlurVertical_SingleChannel.glsl  CloseDepthRenderSingleChannel.glsl  (+4 more)
src/: DecalsAndMarkers.hpp  Object.hpp  core.hpp  core_pch.hpp
(+441 files in other folders)
